@@ -71,6 +71,10 @@ processResources {
 tasks.withType(JavaCompile).configureEach {
 	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
 	it.options.release = 17
+	
+	// I used switch patterns, which are currently
+	// in preview.
+	it.options.compilerArgs.add( "--enable-preview" )
 }
 
 java {
